[package]
name = "rpg2linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.164", features = ["derive", "std"]}
serde_json = "1.0.96"
thiserror = "1.0.44"
reqwest = {version = "0.11.18", features = ["blocking"]}
regex = "1.9.3"
tar = "0.4.40"
flate2 = "1.0.26"