[package]
name = "rpg2linux"
version = "0.2.0"
edition = "2021"
author = "ThePixelCode <thepixelcode@proton.me>"
about = "A command line utility to easily convert/port RPG Maker MV's games for Windows to Linux"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.164", features = ["derive", "std"]}
serde_json = "1.0.96"
thiserror = "1.0.44"
reqwest = {version = "0.11.18", features = ["blocking"]}
regex = "1.9.3"
tar = "0.4.40"
flate2 = "1.0.26"
clap = {version = "4.4.11", features = ["derive", "unicode", "string"]}
#tokio = { version = "1.35.1", features = ["full"] }
users = "0.11.0"
once_cell = "1.19.0"